--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="content flex justify-center">
       <div class="flex flex-row flex-1">
         <h1 class="text-3xl sm-text-4xl font-bold gray700">일상의 모든 물건을 <br class="md-none">거래해 보세요</h1>
-        <a href="/items.html" class="btn btn-block bg-primary">구경하러 가기</a>
+        <a href="pages/items.html" class="btn btn-block bg-primary">구경하러 가기</a>
       </div>
       <div class="flex flex-2">
         <img src="images/home/hero-image.png" width="746" height="340"
