feat: 사이트 이름 상수값으로 설정, 잘못된 링크 수정

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>판다 마켓</title>
   <link rel="stylesheet" href="styles/home.css">
   <link rel="icon" href="images/logo/favicon.ico" type="image/x-icon">
+  <script src="CONSTANS.js"></script>
 </head>
 
 <body>
   <header class="w-full">
     <div class="mx-auto flex-1 header-body flex space-between align-center">
       <a href="/" class="shrink-0">
-        <img aria-label="판다마켓 홈버튼" class="logo" src="images/logo/panda-market-logo.png" width="153" height="51" alt="">
+        <img aria-label="판다마켓 홈버튼" class="logo" src="images/logo/panda-market-logo.png" width="153" height="51">
         <img aria-label="판다마켓 홈버튼(모바일)" class="mb-logo" src="images/logo/mb_panda-market-logo.png" width="103"
-          height="51" alt="">
+          height="51">
       </a>
-      <a href="./pages/login.html" class="bg-primary btn btn-login">
+      <a href="pages/login.html" class="bg-primary btn btn-login">
         로그인
       </a>
     </div>
@@ -31,7 +31,7 @@
       </div>
       <div class="flex flex-2">
         <img src="images/home/hero-image.png" width="746" height="340"
-          alt="a painting of a penguin and a cartoon character ">
+          alt="a painting of a panda and a cartoon character ">
       </div>
     </div>
   </section>
@@ -41,7 +41,7 @@
       <li class="card bg-base">
         <div class="card-img">
           <img src="images/home/feature1-image.png" width="588" height="444"
-            alt="a collage of different colored stickers on a white surface ">
+            alt="a collage of different items on a white surface ">
         </div>
         <div class="card-body text-lg tb-text-2lg">
           <div>
@@ -60,14 +60,13 @@
           <p class="dt-text-2xl font-medium pt-12 gray700">구매하고 싶은 물품은 검색해서<br> 쉽게 찾아보세요</p>
         </div>
         <div class="card-img">
-          <img src="images/home/feature2-image.png" width="588" height="444"
-            alt="a clock on a wall with a picture of a bird on it ">
+          <img src="images/home/feature2-image.png" width="588" height="444" alt="">
         </div>
       </li>
       <li class="card bg-base">
         <div class="card-img">
           <img src="./images/home/feature3-image.png" width="588" height="444"
-            alt="a blue and white wall with various designs ">
+            alt="a blue and white icon with various designs ">
         </div>
         <div class="card-body text-lg tb-text-2lg">
           <div>
@@ -95,8 +94,8 @@
     <ul class="flex space-between align-center">
       <li class="gray400">©codeit - 2024</li>
       <li class="gray200 flex gap-30">
-        <a href="/privacy.html">Privacy Policy</a>
-        <a href="/faq.html">FAQ</a>
+        <a href="pages/privacy.html">Privacy Policy</a>
+        <a href="pages/faq.html">FAQ</a>
       </li>
       <li class="flex gap-12">
         <a href="https://www.facebook.com/" target="_blank">
