--- a/pages/login.html
+++ b/pages/login.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/login.css">
-  <title>판다마켓 - 로그인</title>
+  <script src="../CONSTANS.js"></script>
+  <title></title>
 </head>
 
 <body>
@@ -42,7 +43,7 @@
         </section>
 
         <section class="text-center">
-          <p class="text-md">판다마켓이 처음이신가요? <a class="primary100 underline" href="/pages/signup.html">회원가입</a></p>
+          <p class="text-md">판다마켓이 처음이신가요? <a class="primary100 underline" href="pages/signup.html">회원가입</a></p>
         </section>
       </section>
     </article>
