--- a/pages/signup.html
+++ b/pages/signup.html
@@ -5,7 +5,8 @@
   <link rel="stylesheet" href="../styles/signup.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>판다마켓 - 회원가입</title>
+  <script src="../CONSTANS.js"></script>
+  <title></title>
 </head>
 
 <body>
