--- a/pages/items.html
+++ b/pages/items.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <script src="../CONSTANS.js"></script>
+  <title></title>
 </head>
 
 <body>
