--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <script src="../CONSTANS.js"></script>
+  <title></title>
 </head>
+
 <body>
-<h1>privacy</h1>
+  <h1>privacy</h1>
 </body>
+
 </html>
