style: html 태그의 클래스명 변경

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           </div>
         </div>
       </section>
-      <section class="main-page">
-        <div class="main-page-section">
+      <section class="main-page-section">
+        <div class="main-page">
           <div class="main-content-container">
             <img
               class="main-page-image"
@@ -62,7 +62,7 @@
             </div>
           </div>
         </div>
-        <div class="main-page-section">
+        <div class="main-page">
           <div class="main-content-container">
             <div class="main-page-text second align-right">
               <span class="sub-title">Search</span>
@@ -81,7 +81,7 @@
             />
           </div>
         </div>
-        <div class="main-page-section">
+        <div class="main-page">
           <div class="main-content-container">
             <img class="main-page-image" src="./images/4.register_product.jpg" />
             <div class="main-page-text align-left">
