--- a/pages/login.html
+++ b/pages/login.html
@@ -43,7 +43,7 @@
         </section>
 
         <section class="text-center">
-          <p class="text-md">판다마켓이 처음이신가요? <a class="primary100 underline" href="pages/signup.html">회원가입</a></p>
+          <p class="text-md">판다마켓이 처음이신가요? <a class="primary100 underline" href="signup.html">회원가입</a></p>
         </section>
       </section>
     </article>
