style: 로그인 페이지 내 태그의 클래스명 변경

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -51,9 +51,7 @@
           </a>
         </div>
       </div>
-      <p class="create-account">
-        판다마켓이 처음이신가요? <a href="../signup/index.html">회원가입</a>
-      </p>
+      <p class="sign-up">판다마켓이 처음이신가요? <a href="../signup/index.html">회원가입</a></p>
     </main>
   </body>
 </html>
