feat: 미완성 html 파일에 기본 내용 추가

--- a/pages/privacy/index.html
+++ b/pages/privacy/index.html
@@ -16,5 +16,7 @@
       gtag("config", "G-ZNH254KW2D");
     </script>
   </head>
-  <body></body>
+  <body>
+    Privacy Policy
+  </body>
 </html>
