ㄹeat: Add missing title tag and update image alt text
- Add missing title tag to the HTML document
- Update image alt text to provide more descriptive information

Refactor the HTML code to improve accessibility and SEO.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ko">
 
 <head>
-  <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
         'gtm.start':
@@ -11,25 +10,27 @@
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-WR6VK2S3');</script>
-  <!-- End Google Tag Manager -->
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/home.css">
   <link rel="icon" href="images/logo/favicon.ico" type="image/x-icon">
   <script src="CONSTANS.js"></script>
+  <title></title>
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
+
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WR6VK2S3" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+
   <header class="w-full">
     <div class="mx-auto flex-1 header-body flex space-between align-center">
-      <a href="/" class="shrink-0">
-        <img aria-label="판다마켓 홈버튼" class="logo" src="images/logo/panda-market-logo.png" width="153" height="51">
-        <img aria-label="판다마켓 홈버튼(모바일)" class="mb-logo" src="images/logo/mb_panda-market-logo.png" width="103"
-          height="51">
+      <a href="/" class="shrink-0" aria-label="판다마켓 홈버튼">
+        <img class="logo" src="images/logo/panda-market-logo.png" width="153" height="51" alt="판다마켓 로고"
+          aria-hidden="true">
+        <img class="mb-logo" src="images/logo/mb_panda-market-logo.png" width="103" height="51" alt=""
+          aria-hidden="true">
       </a>
       <a href="pages/login.html" class="bg-primary btn btn-login">
         로그인
@@ -45,7 +46,7 @@
       </div>
       <div class="flex flex-2">
         <img src="images/home/hero-image.png" width="746" height="340"
-          alt="a painting of a panda and a cartoon character ">
+          alt="귀여운 팬더 캐릭터가 파란 가방을 메고 도시 배경 앞에 서 있는 일러스트레이션">
       </div>
     </div>
   </section>
@@ -55,7 +56,7 @@
       <li class="card bg-base">
         <div class="card-img">
           <img src="images/home/feature1-image.png" width="588" height="444"
-            alt="a collage of different items on a white surface ">
+            alt="연필꽂이, 책, 하트 모양 안경 아이콘이 있는 파스텔 색상의 앱 인터페이스 일러스트레이션">
         </div>
         <div class="card-body text-lg tb-text-2lg">
           <div>
@@ -74,13 +75,14 @@
           <p class="dt-text-2xl font-medium pt-12 gray700">구매하고 싶은 물품은 검색해서<br> 쉽게 찾아보세요</p>
         </div>
         <div class="card-img">
-          <img src="images/home/feature2-image.png" width="588" height="444" alt="">
+          <img src="images/home/feature2-image.png" width="588" height="444"
+            alt="파일 아이콘들 사이에 있는 돋보기 아이콘을 보여주는 검색 기능 일러스트레이션">
         </div>
       </li>
       <li class="card bg-base">
         <div class="card-img">
           <img src="./images/home/feature3-image.png" width="588" height="444"
-            alt="a blue and white icon with various designs ">
+            alt="귀여운 팬더 얼굴이 그려진 녹색 티셔츠와 그 위에 떠 있는 분홍색 하트들">
         </div>
         <div class="card-body text-lg tb-text-2lg">
           <div>
@@ -99,7 +101,8 @@
         <h1 class="text-3xl sm-text-4xl font-bold gray700">믿을 수 있는 <br> 판다마켓 중고 거래</h1>
       </div>
       <div class="flex">
-        <img src="images/home/bottom-banner-image.png" alt="판다 마켓" width="746" height="397">
+        <img src="images/home/bottom-banner-image.png" alt="대화 중인 두 팬더 캐릭터와 그 사이의 대화 말풍선에 별점 5개가 표시된 일러스트레이션"
+          width="746" height="397">
       </div>
     </div>
   </section>
@@ -112,17 +115,17 @@
         <a href="pages/faq.html">FAQ</a>
       </li>
       <li class="flex gap-12">
-        <a href="https://www.facebook.com/" target="_blank">
-          <img src="images/social/facebook-logo.svg" alt="페이스북" width="20" height="20">
+        <a href="https://www.facebook.com/" target="_blank" aria-label="페이스북 바로가기">
+          <img src="images/social/facebook-logo.svg" alt="페이스북 로고" width="20" height="20">
         </a>
-        <a href="https://x.com/" target="_blank">
-          <img src="images/social/twitter-logo.svg" alt="트위터" width="20" height="20">
+        <a href="https://x.com/" target="_blank" aria-label="X(구트위터) 바로가기">
+          <img src="images/social/twitter-logo.svg" alt="X(구트위터) 로고" width="20" height="20">
         </a>
-        <a href="https://www.youtube.com/" target="_blank">
-          <img src="images/social/youtube-logo.svg" x alt="유튜브" width="20" height="20">
+        <a href="https://www.youtube.com/" target="_blank" aria-label="유튜브 바로가기">
+          <img src="images/social/youtube-logo.svg" x alt="유튜브 로고" width="20" height="20">
         </a>
-        <a href="https://www.instagram.com/" target="_blank">
-          <img src="images/social/instagram-logo.svg" alt="인스타그램" width="20" height="20">
+        <a href="https://www.instagram.com/" target="_blank" aria-label="인스타그램 바로가기">
+          <img src="images/social/instagram-logo.svg" alt="인스타그램 로고" width="20" height="20">
         </a>
       </li>
     </ul>
