--- a/pages/signup/index.html
+++ b/pages/signup/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <link rel="styleSheet" href="../../reset.css" />
-    <link rel="styleSheet" href="./styles.css" />
+    <link rel="styleSheet" href="../login/styles.css" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZNH254KW2D"></script>
 <script>
