Feat: Update copyright year dynamically

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/home.css">
   <link rel="icon" href="images/logo/favicon.ico" type="image/x-icon">
-  <script src="CONSTANS.js"></script>
+  <script defer src="CONSTANS.js"></script>
   <title></title>
 </head>
 
@@ -109,7 +109,7 @@
 
   <footer class="bg-footer">
     <ul class="flex space-between align-center">
-      <li class="gray400">©codeit - 2024</li>
+      <li class="gray400" id="copyright-year"></li>
       <li class="gray200 flex gap-30">
         <a href="pages/privacy.html">Privacy Policy</a>
         <a href="pages/faq.html">FAQ</a>
