style: 랜딩페이지 태그 및 스타일 변경
- 텍스트의 줄을 나눌 때 <br/>태그를 사용하지 않고 word-break를 통해 줄을 나누도록 설정:
줄이 나눠지는 width를 계산하여 max-width로 설정

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section class="banner">
         <div class="banner-content">
           <div class="banner-text-container">
-            <p class="banner-text">일상의 모든 물건을<br />거래해 보세요</p>
+            <p class="banner-text">일상의 모든 물건을 거래해 보세요</p>
             <a href="./pages/items/index.html" class="banner-button">구경하러 가기</a>
           </div>
           <div class="image-container top">
@@ -50,29 +50,21 @@
               src="./images/2.popular_product.jpg"
               alt="판다마켓 인기 상품"
             />
-            <div class="main-page-text align-left">
+            <div class="main-page-text align-left first">
               <span class="sub-title">Hot item</span>
-              <h1 class="main-title">
-                인기 상품을<br />
-                확인해 보세요
-              </h1>
+              <h1 class="main-title first">인기 상품을 확인해 보세요</h1>
               <p class="description align-left">
-                가장 HOT한 중고거래 물품을<br />판다 마켓에서 확인해 보세요
+                가장 HOT한 중고거래 물품을 판다 마켓에서 확인해 보세요
               </p>
             </div>
           </div>
         </div>
         <div class="main-page">
           <div class="main-content-container">
-            <div class="main-page-text second align-right">
+            <div class="main-page-text align-right second">
               <span class="sub-title">Search</span>
-              <h1 class="main-title">
-                구매를 원하는<br />
-                상품을 검색하세요
-              </h1>
-              <p class="description align-left">
-                구매하고 싶은 물품은 검색해서 <br />쉽게 찾아보세요
-              </p>
+              <h1 class="main-title">구매를 원하는 상품을 검색하세요</h1>
+              <p class="description align-left">구매하고 싶은 물품은 검색해서 쉽게 찾아보세요</p>
             </div>
             <img
               class="main-page-image"
@@ -84,14 +76,11 @@
         <div class="main-page">
           <div class="main-content-container">
             <img class="main-page-image" src="./images/4.register_product.jpg" />
-            <div class="main-page-text align-left">
+            <div class="main-page-text align-left third">
               <span class="sub-title">Register</span>
-              <h1 class="main-title">
-                판매를 원하는 <br />
-                상품을 등록하세요
-              </h1>
+              <h1 class="main-title third">판매를 원하는 상품을 등록하세요</h1>
               <p class="description align-left">
-                어떤 물건이든 판매하고 싶은 상품을 <br />쉽게 등록하세요
+                어떤 물건이든 판매하고 싶은 상품을 쉽게 등록하세요
               </p>
             </div>
           </div>
@@ -99,10 +88,7 @@
         <section class="banner bottom">
           <div class="banner-content">
             <div class="banner-text-container bottom">
-              <p class="banner-text bottom">
-                믿을 수 있는<br />
-                판다마켓 중고 거래
-              </p>
+              <p class="banner-text bottom">믿을 수 있는 판다마켓 중고 거래</p>
             </div>
             <div class="image-container bottom">
               <img
