--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -29,9 +29,9 @@
   </head>
   <body>
     <main>
-      <section class="logo">
+      <div class="logo">
         <a href="/"><img src="../../images/logo.png" /></a>
-      </section>
+      </div>
       <form>
         <label for="email">이메일</label>
         <input id="email" type="email" placeholder="이메일을 입력해주세요" />
@@ -45,9 +45,11 @@
       <div class="social-login">
         <span>간편 로그인하기</span>
         <div class="login-buttons">
-          <a href="https://www.google.com"><img src="../../images/google.png" /></a>
+          <a href="https://www.google.com"
+            ><img src="../../images/google.png" alt="구글 아이디로 로그인"
+          /></a>
           <a href="https://www.kakaocorp.com/page/">
-            <img src="../../images/kakaotalk.png" />
+            <img src="../../images/kakaotalk.png" alt="카카오계정으로 로그인" />
           </a>
         </div>
       </div>
