--- a/pages/signup/index.html
+++ b/pages/signup/index.html
@@ -16,13 +16,14 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-ZNH254KW2D');
 </script>
   </head>
   <body>
     <main>
-      <div class="logo"><a href="/"><img src="../../images/logo.png" /></a></div>
+      <div class="logo">
+        <a href="/"><img src="../../images/logo.png" /></a>
+      </div>
       <form>
         <label for="email">이메일</label>
         <input id="email" type="email" placeholder="이메일을 입력해주세요" />
@@ -43,9 +44,9 @@
       <div class="social-login">
         <span>간편 로그인하기</span>
         <div class="login-buttons">
-            <a href="https://www.google.com"><img src="../../images/google.png" /></a>
+            <a href="https://www.google.com"><img src="../../images/google.png" alt="구글 아이디로 로그인" /></a>
             <a href="https://www.kakaocorp.com/page/">
-              <img src="../../images/kakaotalk.png" />
+              <img src="../../images/kakaotalk.png" alt="카카오계정으로 로그인"/>
             </a>
         </div>
       </div>
