--- a/판다마켓/index.html
+++ b/판다마켓/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="header_inner">
             <h1><img src="./img/Group 19.png" alt="logo"></h1>
-            <div class="btn_login"><a href="./sub/login/login.html">로그인</a></div>
+            <button class="btn_login"><a href="./sub/login/login.html">로그인</a></button>
         </div>
     </header>
     <div class="main_visual">
@@ -30,7 +30,7 @@
             <div class="mv_text">
                 <span>일상의 모든 물건을<br />
                 거래해 보세요</span>
-                <div class="btn"><a href="./sub/items.html">구경하러 가기</a></div>
+                <button class="btn"><a href="./sub/items.html">구경하러 가기</a></button>
             </div>
             <div class="txt_img">
                 <img src="./img/hero-image.png" alt="팬더그림">
@@ -85,8 +85,8 @@
     <div class="footer_inner">
         <span>©codeit - 2024</span>
         <div class="ft_cen">
-            <span><a href="privacy.html">Privacy Policy</a></span>
-            <span><a href="FAQ.html">FAQ</a></span>
+            <span><a href="./sub/privacy.html">Privacy Policy</a></span>
+            <span><a href="./sub/FAQ.html">FAQ</a></span>
         </div>
         <ul class="sns">
             <li>
