--- a/판다마켓/sub/signup/signup.html
+++ b/판다마켓/sub/signup/signup.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="inner">
-        <a href="/index.html" class="logo">
-            <img src="/img/Group 19.png" alt="판다마켓 로고">
+        <a href="/판다마켓 복사본/index.html" class="logo">
+            <img src="/판다마켓 복사본/img/Group 19.png" alt="판다마켓 로고">
         </a>
         <div class="login_inner">
             <div class="e_mail">
@@ -29,22 +29,22 @@
                 <input type="password" placeholder="비밀번호를 다시 한 번 입력해주세요" class="box" id="pass">
             </div>
                 <button class="join_bt">
-                    <p>회원가입</p>
+                    <a href="">회원가입</a>
                 </button>
                 <div class="simple_login">
                     <span>간편 로그인하기</span>
                     <div class="bts">
                         <a href="https://www.google.co.kr/" target="_blank" class="gmail">
-                            <img src="/img/Component 2.png" alt="google">
+                            <img src="../../img/Component 2.png" alt="google">
                         </a>
                         <a href="https://www.kakaocorp.com/page/service/service/KakaoTalk" target="_blank" class="kakaotalk">
-                            <img src="/img/Component 3.png" alt="kakao">
+                            <img src="/판다마켓 복사본/img/Component 3.png" alt="kakao">
                         </a>
                     </div>
                 </div>
                 <div class="txt">
                     <p>이미 회원이신가요?</p>
-                    <a href="/sub/login/login.html">로그인</a>
+                    <a href="../login/login.html">로그인</a>
                 </div>
             </div>   
         </div>
