--- a/판다마켓/sub/login/login.html
+++ b/판다마켓/sub/login/login.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="inner">
-        <a href="/index.html" class="logo">
-            <img src="/img/Group 19.png" alt="판다마켓 로고">
+        <a href="../../index.html" class="logo">
+            <img src="../../img/Group 19.png" alt="판다마켓 로고">
         </a>
         <div class="login_inner">
             <div class="e_mail">
@@ -19,24 +19,24 @@
             <div class="password">
                 <p>비밀번호</p>
                 <input type="password" placeholder="비밀번호를 입력해주세요" class="box" id="pass">
-                </div>
+            </div>
                 <button class="login_bt">
-                    <p>로그인</p>
+                    <a href="">로그인</a>
                 </button>
                 <div class="simple_login">
                     <span>간편 로그인하기</span>
                     <div class="bts">
                         <a href="https://www.google.co.kr/" target="_blank" class="gmail">
-                            <img src="/img/Component 2.png" alt="google">
+                            <img src="/판다마켓 복사본/img/Component 2.png" alt="google">
                         </a>
                         <a href="https://www.kakaocorp.com/page/service/service/KakaoTalk" target="_blank" class="kakaotalk">
-                            <img src="/img/Component 3.png" alt="kakao">
+                            <img src="/판다마켓 복사본/img/Component 3.png" alt="kakao">
                         </a>
                     </div>
                 </div>
                 <div class="txt">
                     <p>판다마켓이 처음이신가요?</p>
-                    <a href="/sub/signup/signup.html">회원가입</a>
+                    <a href="../signup/signup.html">회원가입</a>
                 </div>
             </div>   
         </div>
