--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="styleSheet" href="../../reset.css" />
-    <link rel="styleSheet" href="./styles.css" />
+    <link rel="stylesheet" href="../../reset.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
       as="style"
