feat: 랜딩페이지 중첩 태그 삭제

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <header>
         <div class="header-container">
           <img class="logo" width="151" height="51" src="/images/logo.png" alt="판다마켓 로고" />
-          <a href="./pages/login/index.html"><button class="login-button">로그인</button></a>
+          <a class="login-button" href="./pages/login/index.html">로그인</a>
         </div>
       </header>
       <section class="banner">
