style: 로그인,회원가입 페이지 태그 변경

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -29,9 +29,9 @@
   </head>
   <body>
     <main>
-      <div class="logo">
+      <header>
         <a href="/"><img src="../../images/logo.png" /></a>
-      </div>
+      </header>
       <form>
         <label for="email">이메일</label>
         <input id="email" type="email" placeholder="이메일을 입력해주세요" />
