style: gap-*, p-* class속성도 css variable로 정의

--- a/pages/login.html
+++ b/pages/login.html
@@ -3,14 +3,16 @@
 
 <head>
   <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
+  <script>
+    (function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
         'gtm.start':
           new Date().getTime(), event: 'gtm.js'
       }); var f = d.getElementsByTagName(s)[0],
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-WR6VK2S3');</script>
+    })(window, document, 'script', 'dataLayer', 'GTM-WR6VK2S3');
+  </script>
   <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,8 +23,10 @@
 
 <body>
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WR6VK2S3" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WR6VK2S3" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe>
+  </noscript>
   <!-- End Google Tag Manager (noscript) -->
   <main class="min-h-screen">
     <article class="login-container grid justify-center">
@@ -47,7 +51,7 @@
           </form>
         </div>
 
-        <div class="flex space-between align-center bg-main rounded-lg">
+        <div class="flex space-between align-center bg-main rounded-lg py-4">
           <p class="text-lg gray800">간편 로그인하기</p>
           <div class="flex">
             <a href="https://www.google.com/" aria-label="구글 간편 로그인 버튼">
