style: Adjust login page layout and spacing

--- a/pages/login.html
+++ b/pages/login.html
@@ -29,31 +29,31 @@
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
   <main class="min-h-screen">
-    <article class="login-container grid justify-center">
+    <article class="login-container grid justify-center gap-10 pt-15 tb-pt-12 mb-pt-6 px-13 mb-px-4">
       <section class="logo-section flex justify-center">
         <a href="/" aria-label="홈으로">
-          <img class="flex justify-center" src="../images/logo/panda-market-logo.png" alt="판다마켓 로고" width="396"
-            height="132">
+          <img class="flex justify-center mb-w-49.5 mx-auto" src="../images/logo/panda-market-logo.png" alt="판다마켓 로고"
+            width="396" height="132">
         </a>
       </section>
-      <section class="login-section grid">
+      <section class="form-section grid gap-6">
         <div class="flex justify-center flex-col">
-          <form class="flex flex-col">
-            <div class=" flex flex-col">
+          <form class="flex flex-col gap-6 mb-gap-4">
+            <div class=" flex flex-col gap-4 mb-gap-2">
               <label for="email" class="text-2lg font-bold">이메일</label>
               <input type="email" id="email" name="email" placeholder="이메일을 입력해주세요.">
             </div>
-            <div class="flex flex-col">
+            <div class="flex flex-col gap-4 mb-gap-2">
               <label for="password" class="text-2lg font-bold">비밀번호</label>
               <input type="password" autocomplete id="password" name="password" placeholder="비밀번호를 입력해주세요">
             </div>
             <button type="submit" class="flex btn btn-block bg-gray400">로그인</button>
-          </form>
+            </f’orm>
         </div>
 
-        <div class="flex space-between align-center bg-main rounded-lg py-4">
+        <div class="flex space-between align-center bg-main rounded-lg py-4 px-6 ">
           <p class="text-lg gray800">간편 로그인하기</p>
-          <div class="flex">
+          <div class="flex gap-4">
             <a href="https://www.google.com/" aria-label="구글 간편 로그인 버튼">
               <img src="../images/logo/google-login.png" width="42" alt="">
             </a>
