--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -3,20 +3,18 @@
 
 <head>
   <!-- Google Tag Manager -->
-  <script>
-    (function (w, d, s, l, i) {
+  <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
         'gtm.start':
           new Date().getTime(), event: 'gtm.js'
       }); var f = d.getElementsByTagName(s)[0],
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-WR6VK2S3');
-  </script>
+    })(window, document, 'script', 'dataLayer', 'GTM-WR6VK2S3');</script>
   <!-- End Google Tag Manager -->
+  <link rel="stylesheet" href="../styles/sign-up.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/login.css">
   <script src="../CONSTANS.js"></script>
   <title></title>
 </head>
@@ -28,8 +26,8 @@
       style="display:none;visibility:hidden"></iframe>
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
-  <main class="min-h-screen">
-    <article class="login-container grid justify-center gap-10  mb-gap-6 pt-15 tb-pt-12 mb-pt-6 px-13 mb-px-4">
+  <main class="min-h-screen ">
+    <article class="sign-up-container grid gap-10 mb-gap-6 justify-center pt-15 tb-pt-12 mb-pt-6  px-13 mb-px-4">
       <section class="flex justify-center">
         <a href="/" aria-label="홈으로">
           <img class="flex justify-center mb-w-49.5 mx-auto" src="../images/logo/panda-market-logo.png" alt="판다마켓 로고"
@@ -41,19 +39,28 @@
           <form class="flex flex-col gap-6 mb-gap-4 text-2lg mb-text-md font-bold">
             <div class="flex flex-col gap-4 mb-gap-2">
               <label for="email">이메일</label>
-              <input type="email" id="email" name="email" placeholder="이메일을 입력해주세요." autocomplete="email">
+              <input type="email" id="email" name="email" placeholder="이메일을 입력해주세요." autocomplete="email" />
+            </div>
+            <div class="flex flex-col gap-4 mb-gap-2"">
+              <label for=" nickname">닉네임</label>
+              <input autocomplete="nickname" type="text" id="nickname" name="nickname" placeholder="닉네임을 입력해주세요.">
             </div>
             <div class="flex flex-col gap-4 mb-gap-2">
               <label for="password">비밀번호</label>
-              <input type="password" autocomplete="current-password" id="password" name="password"
-                placeholder="비밀번호를 입력해주세요">
+              <input type="password" id="password" name="password" placeholder="비밀번호를 입력해주세요"
+                autocomplete="new-password">
             </div>
-            <button type="submit" class="flex btn btn-block bg-gray400 text-xl font-semibold">로그인</button>
+            <div class="flex flex-col gap-4 mb-gap-2">
+              <label for="check-password">비밀번호 확인</label>
+              <input type="password" id="check-password" name="check-password" placeholder="비밀번호를 다시 한 번 입력해주세요"
+                autocomplete="new-password">
+            </div>
+            <button type="submit" class="flex btn btn-block bg-gray400 text-xl mb-text-lg font-semibold">회원가입</button>
           </form>
         </div>
 
         <div class="flex space-between align-center bg-main rounded-lg py-4 px-6">
-          <p class="text-lg gray800 font-medium">간편 로그인하기</p>
+          <p class="text-lg gray800 font-medium ">간편 로그인하기</p>
           <div class="flex gap-4">
             <a href="https://www.google.com/" aria-label="구글 간편 로그인">
               <img src="../images/logo/google-login.png" width="42" alt="">
@@ -65,13 +72,14 @@
         </div>
 
         <div class="flex justify-center">
-          <p class="font-medium" style="font-size: 15px;">판다마켓이 처음이신가요?
-            <a class=" primary100 underline" href="sign-up.html">회원가입</a>
+          <p class="font-medium" style="font-size: 15px;">이미 회원이신가요?
+            <a class="primary100 underline" href="/pages/login.html">로그인</a>
           </p>
         </div>
       </section>
     </article>
   </main>
+
 </body>
 
 </html>
