style: Adjust layout and spacing in main page

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -59,7 +59,7 @@
           </form>
         </div>
 
-        <div class="flex space-between align-center bg-main rounded-lg py-4 px-6">
+        <div class="flex space-between items-center bg-main rounded-lg py-4 px-6">
           <p class="text-lg gray800 font-medium ">간편 로그인하기</p>
           <div class="flex gap-4">
             <a href="https://www.google.com/" aria-label="구글 간편 로그인">
