chore: 디렉토리 구조 변경

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panda Market</title>
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./assets/styles/reset.css" />
+    <link rel="stylesheet" href="./assets/styles/home.css" />
     <link
       rel="stylesheet"
       as="style"
@@ -27,18 +27,28 @@
     <main>
       <header>
         <div class="header-container">
-          <img class="logo" width="151" height="51" src="/images/logo.png" alt="판다마켓 로고" />
-          <a class="login-button" href="./pages/login/index.html">로그인</a>
+          <img
+            class="logo"
+            width="151"
+            height="51"
+            src="./assets/images/common/logo.png"
+            alt="판다마켓 로고"
+          />
+          <a class="login-button" href="./login/index.html">로그인</a>
         </div>
       </header>
       <section class="banner">
         <div class="banner-content">
           <div class="banner-text-container">
             <p class="banner-text">일상의 모든 물건을 거래해 보세요</p>
-            <a href="./pages/items/index.html" class="banner-button">구경하러 가기</a>
+            <a href="./items/index.html" class="banner-button">구경하러 가기</a>
           </div>
           <div class="image-container top">
-            <img class="banner-image" src="images/img_home_top.png" alt="판다마켓 배너 이미지" />
+            <img
+              class="banner-image"
+              src="./assets/images/home/img_home_top.png"
+              alt="판다마켓 배너 이미지"
+            />
           </div>
         </div>
       </section>
@@ -47,7 +57,7 @@
           <div class="main-content-container">
             <img
               class="main-page-image"
-              src="./images/2.popular_product.jpg"
+              src="./assets/images/home/2.popular_product.jpg"
               alt="판다마켓 인기 상품"
             />
             <div class="main-page-text align-left first">
@@ -68,14 +78,14 @@
             </div>
             <img
               class="main-page-image"
-              src="./images/3.search_product.jpg"
+              src="./assets/images/home/3.search_product.jpg"
               alt="판다마켓 상품 검색"
             />
           </div>
         </div>
         <div class="main-page">
           <div class="main-content-container">
-            <img class="main-page-image" src="./images/4.register_product.jpg" />
+            <img class="main-page-image" src="./assets/images/home/4.register_product.jpg" />
             <div class="main-page-text align-left third">
               <span class="sub-title">Register</span>
               <h1 class="main-title third">판매를 원하는 상품을 등록하세요</h1>
@@ -95,7 +105,7 @@
                 class="banner-image"
                 width="746"
                 height="343"
-                src="images/img_home_bottom.png"
+                src="./assets/images/home/img_home_bottom.png"
                 alt="판다마켓 상품 등록"
               />
             </div>
@@ -106,21 +116,21 @@
         <div class="footer-container">
           <div class="copyright">©codeit - 2024</div>
           <div class="footer-links">
-            <a href="./pages/privacy/index.html">Privacy Policy</a>
-            <a href="./pages/faq/index.html">FAQ</a>
+            <a href="./privacy/index.html">Privacy Policy</a>
+            <a href="./faq/index.html">FAQ</a>
           </div>
           <div class="social-media-link">
             <a target="_blank" href="https://www.facebook.com"
-              ><img src="./images/ic_facebook.png" alt="페이스북 로고"
+              ><img src="./assets/images/home/ic_facebook.png" alt="페이스북 로고"
             /></a>
             <a target="_blank" href="https://x.com">
-              <img src="./images/ic_twitter.png" alt="x(구 트위터) 로고" />
+              <img src="./assets/images/home/ic_twitter.png" alt="x(구 트위터) 로고" />
             </a>
             <a target="_blank" href="https://youtube.com">
-              <img src="./images/ic_youtube.png" alt="유튜브 로고" />
+              <img src="./assets/images/home/ic_youtube.png" alt="유튜브 로고" />
             </a>
             <a target="_blank" href="https://instagram.com">
-              <img src="./images/ic_instagram.png" alt="인스타그램 로고" />
+              <img src="./assets/images/home/ic_instagram.png" alt="인스타그램 로고" />
             </a>
           </div>
         </div>
