--- a/signup/index.html
+++ b/signup/index.html
@@ -8,8 +8,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../login/styles.css" />
+    <link rel="stylesheet" href="../assets/styles/reset.css" />
+    <link rel="stylesheet" href="../assets/styles/login&signup.css" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZNH254KW2D"></script>
 <script>
@@ -22,7 +22,7 @@
   <body>
     <main>
       <header>
-        <a href="/"><img src="../../images/logo.png" /></a>
+        <a href="/"><img src="../assets/images/common/logo.png" /></a>
       </header>
       <form>
         <label for="email">이메일</label>
@@ -44,9 +44,9 @@
       <div class="social-login">
         <span>간편 로그인하기</span>
         <div class="login-buttons">
-            <a href="https://www.google.com"><img src="../../images/google.png" alt="구글 아이디로 로그인" /></a>
+            <a href="https://www.google.com"><img src="../assets/images/login&signup/google.png" alt="구글 아이디로 로그인" /></a>
             <a href="https://www.kakaocorp.com/page/">
-              <img src="../../images/kakaotalk.png" alt="카카오계정으로 로그인"/>
+              <img src="../assets/images/login&signup/kakaotalk.png" alt="카카오계정으로 로그인"/>
             </a>
         </div>
       </div>
