--- a/login/index.html
+++ b/login/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="../assets/styles/reset.css" />
+    <link rel="stylesheet" href="../assets/styles/login&signup.css" />
     <link
       rel="stylesheet"
       as="style"
@@ -30,7 +30,7 @@
   <body>
     <main>
       <header>
-        <a href="/"><img src="../../images/logo.png" /></a>
+        <a href="/"><img src="../assets/images/common/logo.png" /></a>
       </header>
       <form>
         <label for="email">이메일</label>
@@ -46,10 +46,10 @@
         <span>간편 로그인하기</span>
         <div class="login-buttons">
           <a href="https://www.google.com"
-            ><img src="../../images/google.png" alt="구글 아이디로 로그인"
+            ><img src="../assets/images/login&signup/google.png" alt="구글 아이디로 로그인"
           /></a>
           <a href="https://www.kakaocorp.com/page/">
-            <img src="../../images/kakaotalk.png" alt="카카오계정으로 로그인" />
+            <img src="../assets/images/login&signup/kakaotalk.png" alt="카카오계정으로 로그인" />
           </a>
         </div>
       </div>
