--- a/login/index.html
+++ b/login/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="../assets/styles/reset.css" />
-    <link rel="stylesheet" href="../assets/styles/login&signup.css" />
+    <link rel="stylesheet" href="../assets/styles/sign.css" />
     <link
       rel="stylesheet"
       as="style"
